--- a/src/assets/style/preload.scss
+++ b/src/assets/style/preload.scss
@@ -3,6 +3,9 @@
 // 1% = 1vw
 // vw 为百分比单位 换算方法为 (长度 / 设计稿长度) * 100%
 @function px2vw($px){
-// 以常用750的设计稿为主
-  @return $px * 100vw / 750
+  @return $px / 750 * 100vw
+}
+
+@function height($px){
+  @return $px * 100vw / 667
 }
